package campingplatz.plots.plotreservations;

import campingplatz.plots.Plot;
import campingplatz.reservation.ReservationRepository;

public interface PlotReservationRepository extends ReservationRepository<Plot, PlotReservation> {
}
